--- a/west.html
+++ b/west.html
@@ -519,7 +519,7 @@
 
                     <tr>
                       <td>Colorado</td>
-                      <td> <a href="" class="page-link">Denver-Golden</a></td>
+                      <td> <a href="southwest.html" class="page-link">Denver-Golden</a></td>
                       <td>LC</td>
                       <td>05/03/20</td>
                       <td>05/04/20</td>
@@ -530,7 +530,7 @@
 
                     <tr>
                       <td>Colorado</td>
-                      <td> <a href="" class="page-link">Denver-Golden</a></td>
+                      <td> <a href="southwest.html" class="page-link">Denver-Golden</a></td>
                       <td>DC</td>
                       <td>05/05/20</td>
                       <td>05/06/20</td>
@@ -541,7 +541,7 @@
 
                     <tr>
                       <td>Colorado</td>
-                      <td> <a href="" class="page-link">Denver-Golden</a></td>
+                      <td> <a href="southwest.html" class="page-link">Denver-Golden</a></td>
                       <td>LI</td>
                       <td>05/07/20</td>
                       <td>05/08/20</td>
@@ -552,7 +552,7 @@
 
                     <tr>
                       <td>Hawaii</td>
-                      <td> <a href="" class="page-link">Honolulu</a></td>
+                      <td> <a href="south-ca.html" class="page-link">Honolulu</a></td>
                       <td>LC-10</td>
                       <td>TBA</td>
                       <td>TBA</td>
@@ -563,7 +563,7 @@
 
                     <tr>
                       <td>Idaho</td>
-                      <td> <a href="" class="page-link">Boise</a></td>
+                      <td> <a href="northwest.html" class="page-link">Boise</a></td>
                       <td>LC</td>
                       <td>04/19/20</td>
                       <td>04/20/20</td>
@@ -574,7 +574,7 @@
 
                     <tr>
                       <td>Idaho</td>
-                      <td> <a href="" class="page-link">Boise</a></td>
+                      <td> <a href="northwest.html" class="page-link">Boise</a></td>
                       <td>DC</td>
                       <td>04/21/20</td>
                       <td>04/22/20</td>
@@ -585,7 +585,7 @@
 
                     <tr>
                       <td>Idaho</td>
-                      <td> <a href="" class="page-link">Boise</a></td>
+                      <td> <a href="northwest.html" class="page-link">Boise</a></td>
                       <td>LI</td>
                       <td>04/23/20</td>
                       <td>04/24/20</td>
@@ -596,7 +596,7 @@
 
                     <tr>
                       <td>New Mexico</td>
-                      <td> <a href="" class="page-link">Albuquerque/Santa Fe</a></td>
+                      <td> <a href="southwest.html" class="page-link">Albuquerque/Santa Fe</a></td>
                       <td>LC</td>
                       <td>TBA</td>
                       <td>TBA</td>
@@ -607,7 +607,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Salem</a></td>
+                      <td> <a href="northwest.html" class="page-link">Salem</a></td>
                       <td>LC</td>
                       <td>01/17/20</td>
                       <td>01/18/20</td>
@@ -618,7 +618,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Salem</a></td>
+                      <td> <a href="northwest.html" class="page-link">Salem</a></td>
                       <td>DC</td>
                       <td>01/19/20</td>
                       <td>01/20/20</td>
@@ -629,7 +629,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Salem</a></td>
+                      <td> <a href="northwest.html" class="page-link">Salem</a></td>
                       <td>LI</td>
                       <td>01/21/20</td>
                       <td>01/22/20</td>
@@ -640,7 +640,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Salem</a></td>
+                      <td> <a href="northwest.html" class="page-link">Salem</a></td>
                       <td>LC</td>
                       <td>11/10/20</td>
                       <td>11/11/20</td>
@@ -651,7 +651,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Salem</a></td>
+                      <td> <a href="northwest.html" class="page-link">Salem</a></td>
                       <td>DC</td>
                       <td>11/12/20</td>
                       <td>11/13/20</td>
@@ -662,7 +662,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Bend</a></td>
+                      <td> <a href="northwest.html" class="page-link">Bend</a></td>
                       <td>LC</td>
                       <td>06/26/19</td>
                       <td>06/27/19</td>
@@ -673,7 +673,7 @@
 
                     <tr>
                       <td>Oregon</td>
-                      <td> <a href="" class="page-link">Bend</a></td>
+                      <td> <a href="northwest.html" class="page-link">Bend</a></td>
                       <td>DC</td>
                       <td>06/28/19</td>
                       <td>06/29/19</td>
@@ -684,7 +684,7 @@
 
                     <tr>
                       <td>Washington</td>
-                      <td> <a href="" class="page-link">Seattle/Stanwood</a></td>
+                      <td> <a href="northwest.html" class="page-link">Seattle/Stanwood</a></td>
                       <td>LC</td>
                       <td>03/22/20</td>
                       <td>03/23/20</td>
@@ -695,7 +695,7 @@
 
                     <tr>
                       <td>Washington</td>
-                      <td> <a href="" class="page-link">Seattle/Stanwood</a></td>
+                      <td> <a href="northwest.html" class="page-link">Seattle/Stanwood</a></td>
                       <td>DC</td>
                       <td>03/24/20</td>
                       <td>03/25/20</td>
@@ -706,7 +706,7 @@
 
                     <tr>
                       <td>Washington</td>
-                      <td> <a href="" class="page-link">Seattle/Stanwood</a></td>
+                      <td> <a href="northwest.html" class="page-link">Seattle/Stanwood</a></td>
                       <td>LI</td>
                       <td>03/26/20</td>
                       <td>03/27/20</td>
