--- a/southeast.html
+++ b/southeast.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
 
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
@@ -203,119 +203,251 @@
     </div>
 
             <div class="col-3-of-3">
-                <section class="section-recent">
+                <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">About us</h5>
-                    <h1 class="heading-one hr-overview">Quick Summary</h1>
+                    <h5 class="heading-five">General Workshops</h5>
+                    <h1 class="heading-one hr-overview">Schedules & Locations</h1>
                   </div>
-                  <div class="section-recent-picture">
-
+                  <div class="section-inside-picture start-picture">
                   </div>
 
-                <div class="section-recent-content">
-                  <h1>Quick Summary of the Intensive Journal Program</h1>
+                <div class="section-inside-content">
+
+                  <h1>Southeastern Region</h1>
+                  <!-- <h6>Using Dreams and Imagery to Develop Your Life</h6> -->
+                  <table class="table-credits table-praises table-schedules">
+                    <tr>
+                      <th>Code</th>
+                      <th>Module</th>
+                      <th>Description</th>
+                    </tr>
+
+                    <tr>
+                      <td>LC</td>
+                      <td> <a href="" class="page-link">Life Context</a></td>
+                      <td>Part One - No Prerequisites</td>
+                    </tr>
+
+                    <tr>
+                      <td>DC</td>
+                      <td> <a href="" class="page-link">Depth Contact</a></td>
+                      <td>Part Two - Prerequisite - Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>LE</td>
+                      <td> <a href="" class="page-link">Life Experience</a></td>
+                      <td>Combines Parts One and Two - No Prerequisites</td>
+                    </tr>
+
+                    <tr>
+                      <td>LI</td>
+                      <td> <a href="" class="page-link">Life Integration</a></td>
+                      <td>Part Three - Prerequisites - Either LC and DC or LE</td>
+                    </tr>
+
+                    <tr>
+                      <td>LS</td>
+                      <td> <a href="" class="page-link">Life Study</a></td>
+                      <td>Learning from another's life - Prerequisite - Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>SEM</td>
+                      <td> <a href="" class="page-link">Seminar</a></td>
+                      <td>Learn the theories behind the Intensive Journal- Prerequisites-Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>PRE</td>
+                      <td> <a href="" class="page-link">Intro Course</a></td>
+                      <td>Experience a sampling of Intensive Journal exercises - Prerequisite - None</td>
+                    </tr>
+
+                  </table>
+                  <br><br>
 
                   <p>
-                    Welcome to the Intensive Journal Program!   This section is designed to give you sufficient information about the Intensive Journal method and what happens at a workshop so that you can decide whether you want to attend a program.  Naturally, you may wish to read the additional information about the method and workshops on our website.
+                    Click on the <strong>city name</strong> to see details of that workshop.
                   </p>
 
-                  <p>
-                The Intensive Journal method is a series of integrated writing exercises about different areas of your life (i.e. personal relationships, body and health, life history, dreams and imagery, meaning in life, etc.) that are designed to help you get to know yourself better.  We are laying a foundation on our lives, and then over time, working through issues within the context of our entire life.
-                 </p>
 
-                 <p>
-                Our program is different than anything you have experienced.  It is based upon Dr. Progoff’s theories of human development that he then implemented in the Intensive Journal method.  You do not need to know the theory - just how to use the method.
-                  </p>
+                  <table class="table-credits table-praises table-schedules">
+                    <tr>
+                      <th>State</th>
+                      <th>City</th>
+                      <th>Module</th>
+                      <th>Begins</th>
+                      <th>Ends</th>
+                      <th>Location</th>
+                      <th>Telephone</th>
+                      <th>Leader</th>
+                    </tr>
 
-<h6>Work in a Deepening Atmosphere with Total Privacy</h6>
+                    <tr>
+                      <td>Florida</td>
+                      <td> <a href="southatlantic.html" class="page-link">Tampa</a></td>
+                      <td>LC</td>
+                      <td>03/08/20</td>
+                      <td>03/09/20</td>
+                      <td>D. H. at Franciscan Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+                    <tr>
+                      <td>Florida</td>
+                      <td> <a href="southatlantic.html" class="page-link">Tampa</a></td>
+                      <td>DC</td>
+                      <td>03/10/20</td>
+                      <td>03/11/20</td>
+                      <td>D. H. at Franciscan Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+                    <tr>
+                      <td>Florida</td>
+                      <td> <a href="southatlantic.html" class="page-link">Tampa</a></td>
+                      <td>LI</td>
+                      <td>03/08/20</td>
+                      <td>03/09/20</td>
+                      <td>D. H. at Franciscan Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
 
-                  <p>
-                    The atmosphere in which the method is conducted is critically important.  A certified instructor will describe an exercise, and then there is a period of quiet where you are writing and applying it to your life.  You work in total privacy - no one comments on your life or vice versa.  The workshop is a progressively deepening atmosphere away from your daily routine where you connect with your inner process and access what is inside you using the Intensive Journal exercises.  The leader is there to guide you through your process and not influence your process.
-                  </p>
 
-                  <h6>
-                    Attend Up to Three-Core Workshop Modules
-                  </h6>
+                    <tr>
+                      <td>North Carolina</td>
+                      <td> <a href="southatlantic.html" class="page-link">Raleigh/Durham-Chapel Hill</a></td>
+                      <td>LC</td>
+                      <td>10/19/18</td>
+                      <td>10/20/18</td>
+                      <td>D.H. at New Hope Conference Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+                    <tr>
+                      <td>North Carolina</td>
+                      <td> <a href="southatlantic.html" class="page-link">Raleigh/Durham-Chapel Hill</a></td>
+                      <td>DC</td>
+                      <td>10/21/18</td>
+                      <td>10/22/18</td>
+                      <td>D.H. at New Hope Conference Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+                    <tr>
+                      <td>North Carolina</td>
+                      <td> <a href="southatlantic.html" class="page-link">Raleigh/Durham-Chapel Hill</a></td>
+                      <td>LI</td>
+                      <td>10/23/18</td>
+                      <td>10/24/18</td>
+                      <td>D.H. at New Hope Conference Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
 
-                  <p>
-                    There are three core modules that comprise the Intensive Journal method.  Each part is typically 12 hours in length spread over two days (about 6 hours per day plus breaks for meals).   The program is paced with breaks to recharge and maintain your energy.  The modules are:
-                  </p>
 
-                  <ul>
-                    <li>
-                    <strong> Part 1 (Life Context)</strong>  covers about half of the exercises in the Intensive Journal workbook and is a very solid experience by itself. <em>No prerequisite.</em>
-                    </li>
-                    <li>
-                    <strong>Part 2 (Depth Contact)</strong>   covers the remaining half of the exercises, primarily in the areas of dreams and imagery and meaning in life. <em>Prerequisite: part 1.</em>
-                    </li>
-                    <li>
-                  <strong>Part 3 (Life Integration / Journal Feedback process)</strong>   helps you develop the material that you started in the first two modules using Dr. Progoff’s feedback process.  It also helps you see connections between different areas of your life because we know that one area impacts and relates to another. <em> Prerequisite: part 2.</em>
-                    </li>
-                  </ul>
+                    <tr>
+                      <td>Tennessee</td>
+                      <td> <a href="southatlantic.html" class="page-link">Nashville/ Chattanooga/ Monteagle</a></td>
+                      <td>LC</td>
+                      <td>03/20/20</td>
+                      <td>03/21/20</td>
+                      <td>D.H. at DuBose Conference Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Nancy-Elizabeth Nimmich</td>
+                    </tr>
+                    <tr>
+                      <td>Tennessee</td>
+                      <td> <a href="southatlantic.html" class="page-link">Nashville/ Chattanooga/ Monteagle</a></td>
+                      <td>DC</td>
+                      <td>03/22/20</td>
+                      <td>03/23/20</td>
+                      <td>D.H. at DuBose Conference Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Nancy-Elizabeth Nimmich</td>
+                    </tr>
+                    <tr>
+                      <td>Tennessee</td>
+                      <td> <a href="southatlantic.html" class="page-link">Nashville/ Chattanooga/ Monteagle</a></td>
+                      <td>LI</td>
+                      <td>03/24/20</td>
+                      <td>03/25/20</td>
+                      <td>D.H. at DuBose Conference Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Nancy-Elizabeth Nimmich</td>
+                    </tr>
 
-                  <p>
-                    As noted, the workshops must be taken in sequence.  Since we often offer more than one module back to back at our program, you may wonder how many workshops you should attend.  It all depends upon the individual - typically about two-thirds of the attendees enroll in the entire program.  Sign up for what you feel safe doing.
-                  </p>
 
-                  <h6>Obtain Possible Benefits: Insights, Perspectives....</h6>
 
-                  <p>
-                    Attendees often obtain unpredictable insights about their lives, sometimes at the most surprising times or areas of their lives.  We are receptive to what comes to us throughout the process; often insights come indirectly from other areas of our lives.  We suspend judgment and do not create any deadlines or expectations for resolving an issue.  Answers to questions we have will come to us when they are ready to reveal themselves.
-                  </p>
+                    <tr>
+                      <td>Texas</td>
+                      <td> <a href="" class="page-link">Dallas</a></td>
+                      <td>LC</td>
+                      <td>04/19/20</td>
+                      <td>04/20/20</td>
+                      <td>D.H. at CCFC</td>
+                      <td>800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+                    <tr>
+                      <td>Texas</td>
+                      <td> <a href="southeasttx.html" class="page-link">Dallas</a></td>
+                      <td>DC</td>
+                      <td>04/21/20</td>
+                      <td>04/22/20</td>
+                      <td>D.H. at CCFC</td>
+                      <td>800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+                    <tr>
+                      <td>Texas</td>
+                      <td> <a href="southeasttx.html" class="page-link">Dallas</a></td>
+                      <td>LI</td>
+                      <td>04/23/20</td>
+                      <td>04/24/20</td>
+                      <td>D.H. at CCFC</td>
+                      <td>800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
 
-                  <h6>
-                    No Advanced Preparation Necessary
-                  </h6>
+                    <tr>
+                      <td>Virginia</td>
+                      <td> <a href="southatlantic.html" class="page-link">Richmond</a></td>
+                      <td>LC</td>
+                      <td>08/09/20</td>
+                      <td>08/10/20</td>
+                      <td>D.H. at Roslyn Retreat Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Nancy-Elizabeth Nimmich</td>
+                    </tr>
+                    <tr>
+                      <td>Virginia</td>
+                      <td> <a href="southatlantic.html" class="page-link">Richmond</a></td>
+                      <td>DC</td>
+                      <td>08/11/20</td>
+                      <td>08/12/20</td>
+                      <td>D.H. at Roslyn Retreat Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Nancy-Elizabeth Nimmich</td>
+                    </tr>
+                    <tr>
+                      <td>Virginia</td>
+                      <td> <a href="southatlantic.html" class="page-link">Richmond</a></td>
+                      <td>LI</td>
+                      <td>08/13/20</td>
+                      <td>08/14/20</td>
+                      <td>D.H. at Roslyn Retreat Center</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Nancy-Elizabeth Nimmich</td>
+                    </tr>
 
-                  <p>
-                  There is nothing to prepare in advance of the workshop.  Just come, be relaxed, and follow along.  If you are aware of other methods, please leave them aside during the workshop and give the Intensive Journal method a chance to work in your life.
-                  </p>
+                  </table>
 
-                  <p>
-                    You receive the Intensive Journal workbook (3 ring binder with tabs in it) as well as paper and a pen.  The main book for the program - At a Journal Workshop (Rev. Ed. 1992) is available for purchase at the workshop; it is used as a reference tool after the workshop.
-                  </p>
+                    <!-- <hr class="trademark-line u-margin-top-small"> -->
 
-                  <h6>
-                    Participants With Different Backgrounds and Interests
-                  </h6>
-
-                  <p>
-                    People of different interests and backgrounds attend our program.  The common theme is that they are there to work in their lives using our method.  The program is geared for the beginner although people repeat the modules from time-to-time to work in their lives in the atmosphere of the workshop.
-                  </p>
-
-                  <h6>
-                    Skills and Interest in Writing Unnecessary
-                  </h6>
-
-                  <p>
-                    You do not have to like to write nor be a good writer.  We have people who are barely literate who attend our program and gain a great deal out of the experience.  You are the only one  who reads what you have written.  You are also not writing your life story - you are simply writing what comes to you in a reflective atmosphere as you apply the exercises to your life.
-                  </p>
-
-                  <h6>
-                    Often Held at Retreat Centers
-                  </h6>
-
-                  <p>
-                    We hold many of our programs at retreat centers.  These centers respect quiet and provide a conducive atmosphere for our program.  The Intensive Journal program is neutral with regard to any particular religious doctrine - we offer a neutral process to help you get in touch with your beliefs.
-                  </p>
-
-                  <h6>
-                    Held Internationally Throughout the Year
-                  </h6>
-
-                  <p>
-                    We offer workshops in the United States, Canada, and overseas (Europe and Australia) throughout the year. Our schedule is updated periodically; check our calendar on our website.
-                  </p>
-
-                  ----add link--- to workshop schedules---
-                  LINK.   Costs vary by location; on our website, click on the city you are interested in attending and scroll to the workshop on the page with details (costs, hours, description of the presenter and
-location, and how to register.
-
-<p>
-  If you have questions, please contact Jon Progoff at 216-342-5170 / 800-221-5844 or at info@intensivejournal.org
-</p>
                 </div>
-
 
                 </section>
 
