--- a/southeasttx.html
+++ b/southeasttx.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
 
         <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
         <link rel="stylesheet" href="css/style.css">
@@ -203,119 +203,118 @@
     </div>
 
             <div class="col-3-of-3">
-                <section class="section-recent">
+                <section class="section-inside">
                   <div class="section-inside-header">
-                    <h5 class="heading-five">About us</h5>
-                    <h1 class="heading-one hr-overview">Quick Summary</h1>
+                    <h5 class="heading-five">General Workshops</h5>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <!-- <span class="vert">&vert;</span> -->
+                      <li><a href="../southeast.html">&larr; Southeastern Region</a></li>
+                      <!-- <span class="vert">&vert;</span> -->
+                    </ul>
+                    <hr class="work-hr">
                   </div>
-                  <div class="section-recent-picture">
-
                   </div>
 
-                <div class="section-recent-content">
-                  <h1>Quick Summary of the Intensive Journal Program</h1>
 
+                  <div class="section-inside-picture start-picture">
+                  </div>
+
+                <div class="section-inside-content">
+
+                  <h1>Intensive Journal Workshops - Southcentral Region</h1>
+                  <!-- <br><br> -->
+                  <h6>Fall, 2019 - Spring, 2020</h6>
+
+                  <h5>Dallas-Fort Worth, Texas:  3-Part Series on April 19-24, 2020</h5>
+
+                  <table class="table-credits table-praises">
+                    <tr>
+                      <th>Workshops</th>
+                      <th>Schedule</th>
+                      <th>Commuters <sup>#</sup></th>
+                      <th>Resident <sup>*</sup></th>
+                    </tr>
+
+                    <tr>
+                      <td>Life Context</td>
+                      <td>04/19:  (:30-4:30  pm; 6-9 pm) <br>04/20:  (9 am-12 pm; 2-5 pm)</td>
+                      <td>$ 265</td>
+                      <td>$ 355</td>
+                    </tr>
+
+                    <tr>
+                      <td>Depth Contact</td>
+                      <td>04/21:  (9 am-12 pm; 2-5 pm)<br>04/22:  (9 am-12 pm; 2-5 pm)</td>
+                      <td>$ 265</td>
+                      <td>$ 355</td>
+                    </tr>
+
+                    <tr>
+                      <td>Life Integration  </td>
+                      <td>04/23:  (9 am-12 pm; 2-5 pm)<br>04/24:  (9 am-12 pm; 1:30-4:30 pm)</td>
+                      <td>$ 265</td>
+                      <td>$ 355</td>
+                    </tr>
+
+                    <tr>
+                      <td>Life Context & Depth Contact</td>
+                      <td> <br> </td>
+                      <td>$ 510</td>
+                      <td>$ 795<sup>**</sup></td>
+                    </tr>
+
+                    <tr>
+                      <td>Depth Contact & Life Integration</td>
+                      <td> <br> </td>
+                      <td>$ 510</td>
+                      <td>$ 795<sup>**</sup></td>
+                    </tr>
+
+                    <tr>
+                      <td>All three workshops</td>
+                      <td> <br> </td>
+                      <td>$ 755</td>
+                      <td>$ 1,225<sup>**</sup></td>
+                    </tr>
+
+                  </table>
+
+                  <!-- <br><br> -->
                   <p>
-                    Welcome to the Intensive Journal Program!   This section is designed to give you sufficient information about the Intensive Journal method and what happens at a workshop so that you can decide whether you want to attend a program.  Naturally, you may wish to read the additional information about the method and workshops on our website.
+                  <sup>#</sup> Tuition and 1 meal daily.
+                  <sup>*</sup>Tuition, single bedroom and 3 meals daily. <br>
+                  <sup>**</sup> Includes cost of room and meals in between workshops. <br>
+                <atrong>Please register by April 4.  If your plans are uncertain call 800-221-5844.</atrong>
                   </p>
+                                    <table class="table-credits table-praises">
+                                      <tr>
+                                        <th>Location
+                                         </th>
+                                        <td>
+                                          <strong>Catholic Conference and Formation Center (CCFC) </strong>   is located on 13 acres in the North Oak Cliff neighborhood off I-35, about 5 miles southwest of downtown Dallas. The center offers both accessibility to the greater Dallas-Ft Worth area and a serene setting for your workshop experience.</td>
+                                      </tr>
+                                      <tr>
+                                        <th>Leader</th>
+                                        <td>
+                                          <strong>Susan Wells</strong> has experience in the field of communications spanning 3 decades. She’s been a poet, video producer, radio drama director, researcher on a Peggy Guggenheim biography, teacher, editor, and, most recently, medical writer with a specialty in oncology and neurology. Susan has degrees in English, comparative literature, and anthropology from Columbia University and Middlebury College, and has worked with the Intensive Journal process for over 25 years.</td>
+                                      </tr>
+                                      <tr>
+                                        <th>Registration</th>
+                                        <td>Call <strong> 216-342-5170 or 800-221-5844 </strong> or write to <strong>Dialogue House</strong> , 23400 Mercantile Road, Suite 2, Beachwood, OH  44122.  Email: info@intensivejournal.org  Credit cards accepted. Make checks payable to Dialogue House. Minimum non-refundable deposit:  commuters:  $50; residents:  $100.</td>
+                                      </tr>
 
-                  <p>
-                The Intensive Journal method is a series of integrated writing exercises about different areas of your life (i.e. personal relationships, body and health, life history, dreams and imagery, meaning in life, etc.) that are designed to help you get to know yourself better.  We are laying a foundation on our lives, and then over time, working through issues within the context of our entire life.
-                 </p>
+                                    </table>
+                                    <br><br><br>
 
-                 <p>
-                Our program is different than anything you have experienced.  It is based upon Dr. Progoff’s theories of human development that he then implemented in the Intensive Journal method.  You do not need to know the theory - just how to use the method.
-                  </p>
 
-<h6>Work in a Deepening Atmosphere with Total Privacy</h6>
 
-                  <p>
-                    The atmosphere in which the method is conducted is critically important.  A certified instructor will describe an exercise, and then there is a period of quiet where you are writing and applying it to your life.  You work in total privacy - no one comments on your life or vice versa.  The workshop is a progressively deepening atmosphere away from your daily routine where you connect with your inner process and access what is inside you using the Intensive Journal exercises.  The leader is there to guide you through your process and not influence your process.
-                  </p>
+                  <!-- <table class="table-credits table-praises table-schedules"> -->
 
-                  <h6>
-                    Attend Up to Three-Core Workshop Modules
-                  </h6>
-
-                  <p>
-                    There are three core modules that comprise the Intensive Journal method.  Each part is typically 12 hours in length spread over two days (about 6 hours per day plus breaks for meals).   The program is paced with breaks to recharge and maintain your energy.  The modules are:
-                  </p>
-
-                  <ul>
-                    <li>
-                    <strong> Part 1 (Life Context)</strong>  covers about half of the exercises in the Intensive Journal workbook and is a very solid experience by itself. <em>No prerequisite.</em>
-                    </li>
-                    <li>
-                    <strong>Part 2 (Depth Contact)</strong>   covers the remaining half of the exercises, primarily in the areas of dreams and imagery and meaning in life. <em>Prerequisite: part 1.</em>
-                    </li>
-                    <li>
-                  <strong>Part 3 (Life Integration / Journal Feedback process)</strong>   helps you develop the material that you started in the first two modules using Dr. Progoff’s feedback process.  It also helps you see connections between different areas of your life because we know that one area impacts and relates to another. <em> Prerequisite: part 2.</em>
-                    </li>
-                  </ul>
-
-                  <p>
-                    As noted, the workshops must be taken in sequence.  Since we often offer more than one module back to back at our program, you may wonder how many workshops you should attend.  It all depends upon the individual - typically about two-thirds of the attendees enroll in the entire program.  Sign up for what you feel safe doing.
-                  </p>
-
-                  <h6>Obtain Possible Benefits: Insights, Perspectives....</h6>
-
-                  <p>
-                    Attendees often obtain unpredictable insights about their lives, sometimes at the most surprising times or areas of their lives.  We are receptive to what comes to us throughout the process; often insights come indirectly from other areas of our lives.  We suspend judgment and do not create any deadlines or expectations for resolving an issue.  Answers to questions we have will come to us when they are ready to reveal themselves.
-                  </p>
-
-                  <h6>
-                    No Advanced Preparation Necessary
-                  </h6>
-
-                  <p>
-                  There is nothing to prepare in advance of the workshop.  Just come, be relaxed, and follow along.  If you are aware of other methods, please leave them aside during the workshop and give the Intensive Journal method a chance to work in your life.
-                  </p>
-
-                  <p>
-                    You receive the Intensive Journal workbook (3 ring binder with tabs in it) as well as paper and a pen.  The main book for the program - At a Journal Workshop (Rev. Ed. 1992) is available for purchase at the workshop; it is used as a reference tool after the workshop.
-                  </p>
-
-                  <h6>
-                    Participants With Different Backgrounds and Interests
-                  </h6>
-
-                  <p>
-                    People of different interests and backgrounds attend our program.  The common theme is that they are there to work in their lives using our method.  The program is geared for the beginner although people repeat the modules from time-to-time to work in their lives in the atmosphere of the workshop.
-                  </p>
-
-                  <h6>
-                    Skills and Interest in Writing Unnecessary
-                  </h6>
-
-                  <p>
-                    You do not have to like to write nor be a good writer.  We have people who are barely literate who attend our program and gain a great deal out of the experience.  You are the only one  who reads what you have written.  You are also not writing your life story - you are simply writing what comes to you in a reflective atmosphere as you apply the exercises to your life.
-                  </p>
-
-                  <h6>
-                    Often Held at Retreat Centers
-                  </h6>
-
-                  <p>
-                    We hold many of our programs at retreat centers.  These centers respect quiet and provide a conducive atmosphere for our program.  The Intensive Journal program is neutral with regard to any particular religious doctrine - we offer a neutral process to help you get in touch with your beliefs.
-                  </p>
-
-                  <h6>
-                    Held Internationally Throughout the Year
-                  </h6>
-
-                  <p>
-                    We offer workshops in the United States, Canada, and overseas (Europe and Australia) throughout the year. Our schedule is updated periodically; check our calendar on our website.
-                  </p>
-
-                  ----add link--- to workshop schedules---
-                  LINK.   Costs vary by location; on our website, click on the city you are interested in attending and scroll to the workshop on the page with details (costs, hours, description of the presenter and
-location, and how to register.
-
-<p>
-  If you have questions, please contact Jon Progoff at 216-342-5170 / 800-221-5844 or at info@intensivejournal.org
-</p>
+                    <!-- <hr class="trademark-line u-margin-top-small"> -->
                 </div>
-
 
                 </section>
 
@@ -389,10 +388,7 @@ location, and how to register.
         </footer>
             </div>
 
-
-
         </div>
-
 
         <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 
