--- a/northeast.html
+++ b/northeast.html
@@ -294,7 +294,7 @@
 
                     <tr>
                       <td>Connecticut</td>
-                      <td> <a href="" class="page-link">New Haven/Madison</a></td>
+                      <td> <a href="northeastne.html" class="page-link">New Haven/Madison</a></td>
                       <td>LC</td>
                       <td>10/11/20</td>
                       <td>10/12/20</td>
@@ -304,7 +304,7 @@
                     </tr>
                     <tr>
                       <td>Connecticut</td>
-                      <td> <a href="" class="page-link">New Haven/Madison</a></td>
+                      <td> <a href="northeastne.html" class="page-link">New Haven/Madison</a></td>
                       <td>DC</td>
                       <td>10/13/20</td>
                       <td>10/14/20</td>
@@ -314,7 +314,7 @@
                     </tr>
                     <tr>
                       <td>Connecticut</td>
-                      <td> <a href="" class="page-link">New Haven/Madison</a></td>
+                      <td> <a href="northeastne.html" class="page-link">New Haven/Madison</a></td>
                       <td>LI</td>
                       <td>10/15/20</td>
                       <td>10/16/20</td>
@@ -328,7 +328,7 @@
 
                     <tr>
                       <td>Massachusetts</td>
-                      <td> <a href="" class="page-link">Boston/Duxbury</a></td>
+                      <td> <a href="northeastne.html" class="page-link">Boston/Duxbury</a></td>
                       <td>LC</td>
                       <td>06/07/20</td>
                       <td>06/08/20</td>
@@ -339,7 +339,7 @@
 
                     <tr>
                       <td>Massachusetts</td>
-                      <td> <a href="" class="page-link">Boston/Duxbury</a></td>
+                      <td> <a href="northeastne.html" class="page-link">Boston/Duxbury</a></td>
                       <td>DC</td>
                       <td>06/09/20</td>
                       <td>06/10/20</td>
@@ -350,7 +350,7 @@
 
                     <tr>
                       <td>Massachusetts</td>
-                      <td> <a href="" class="page-link">Boston/Duxbury</a></td>
+                      <td> <a href="northeastne.html" class="page-link">Boston/Duxbury</a></td>
                       <td>LI</td>
                       <td>06/11/20</td>
                       <td>06/12/20</td>
@@ -363,7 +363,7 @@
 
                     <tr>
                       <td>New Jersey</td>
-                      <td> <a href="" class="page-link">Morristown</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Morristown</a></td>
                       <td>LC</td>
                       <td>12/04/20</td>
                       <td>12/05/20</td>
@@ -373,7 +373,7 @@
                     </tr>
                     <tr>
                       <td>New Jersey</td>
-                      <td> <a href="" class="page-link">Morristown</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Morristown</a></td>
                       <td>DC</td>
                       <td>12/06/20</td>
                       <td>12/07/20</td>
@@ -384,7 +384,7 @@
 
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Manhattan</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Manhattan</a></td>
                       <td>LC</td>
                       <td>02/14/20</td>
                       <td>02/15/20</td>
@@ -394,7 +394,7 @@
                     </tr>
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Manhattan</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Manhattan</a></td>
                       <td>DC</td>
                       <td>02/16/20</td>
                       <td>02/17/20</td>
@@ -406,7 +406,7 @@
 
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Rochester/Palmyra</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Rochester/Palmyra</a></td>
                       <td>LC</td>
                       <td>09/20/19</td>
                       <td>09/21/19</td>
@@ -416,7 +416,7 @@
                     </tr>
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Rochester/Palmyra</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Rochester/Palmyra</a></td>
                       <td>DC</td>
                       <td>09/22/19</td>
                       <td>09/23/19</td>
@@ -428,7 +428,7 @@
 
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Westchester/Tarrytown</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Westchester/Tarrytown</a></td>
                       <td>LC</td>
                       <td>07/26/20</td>
                       <td>07/27/20</td>
@@ -439,7 +439,7 @@
 
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Westchester/Tarrytown</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Westchester/Tarrytown</a></td>
                       <td>DC</td>
                       <td>07/28/20</td>
                       <td>07/29/20</td>
@@ -450,7 +450,7 @@
 
                     <tr>
                       <td>New York</td>
-                      <td> <a href="" class="page-link">Westchester/Tarrytown</a></td>
+                      <td> <a href="northeastnyc.html" class="page-link">Westchester/Tarrytown</a></td>
                       <td>LI</td>
                       <td>07/30/20</td>
                       <td>07/31/20</td>
@@ -461,7 +461,7 @@
 
                     <tr>
                       <td>New York / Quebec</td>
-                      <td> <a href="" class="page-link">Montreal</a></td>
+                      <td> <a href="northeastcanada.html" class="page-link">Montreal</a></td>
                       <td>LC</td>
                       <td>TBA</td>
                       <td>TBA</td>
@@ -472,7 +472,7 @@
 
                     <tr>
                       <td>New York / Ontario</td>
-                      <td> <a href="" class="page-link">Toronto / Mississauga</a></td>
+                      <td> <a href="northeastcanada.html" class="page-link">Toronto / Mississauga</a></td>
                       <td>LC</td>
                       <td>08/16/20</td>
                       <td>08/17/20</td>
@@ -483,7 +483,7 @@
 
                     <tr>
                       <td>New York / Ontario</td>
-                      <td> <a href="" class="page-link">Toronto / Mississauga</a></td>
+                      <td> <a href="northeastcanada.html" class="page-link">Toronto / Mississauga</a></td>
                       <td>DC</td>
                       <td>08/18/20</td>
                       <td>08/19/20</td>
@@ -494,7 +494,7 @@
 
                     <tr>
                       <td>New York / Ontario</td>
-                      <td> <a href="" class="page-link">Toronto / Mississauga</a></td>
+                      <td> <a href="northeastcanada.html" class="page-link">Toronto / Mississauga</a></td>
                       <td>LI</td>
                       <td>08/20/20</td>
                       <td>08/21/20</td>
@@ -505,7 +505,7 @@
 
                     <tr>
                       <td>Pennsylvania</td>
-                      <td> <a href="" class="page-link">Philadelphia-Malvern</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Philadelphia-Malvern</a></td>
                       <td>LC</td>
                       <td>09/25/20</td>
                       <td>09/26/20</td>
@@ -515,7 +515,7 @@
                     </tr>
                     <tr>
                       <td>Pennsylvania</td>
-                      <td> <a href="" class="page-link">Philadelphia-Malvern</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Philadelphia-Malvern</a></td>
                       <td>DC</td>
                       <td>09/27/20</td>
                       <td>09/28/20 </td>
@@ -525,7 +525,7 @@
                     </tr>
                     <tr>
                       <td>Pennsylvania</td>
-                      <td> <a href="" class="page-link">Philadelphia-Malvern</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Philadelphia-Malvern</a></td>
                       <td>LI</td>
                       <td>09/29/20</td>
                       <td>09/30/20</td>
@@ -538,7 +538,7 @@
 
                     <tr>
                       <td>Virginia</td>
-                      <td> <a href="" class="page-link">Richmond</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Richmond</a></td>
                       <td>LC</td>
                       <td>08/09/20</td>
                       <td>08/10/20</td>
@@ -549,7 +549,7 @@
 
                     <tr>
                       <td>Virginia</td>
-                      <td> <a href="" class="page-link">Richmond</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Richmond</a></td>
                       <td>DC</td>
                       <td>08/11/20 </td>
                       <td>08/12/20</td>
@@ -560,7 +560,7 @@
 
                     <tr>
                       <td>Virginia</td>
-                      <td> <a href="" class="page-link">Richmond</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Richmond</a></td>
                       <td>LI</td>
                       <td>08/13/20</td>
                       <td>08/14/20</td>
@@ -571,7 +571,7 @@
 
                     <tr>
                       <td>Virginia</td>
-                      <td> <a href="" class="page-link">Leesburg</a></td>
+                      <td> <a href="northeastpa.html" class="page-link">Leesburg</a></td>
                       <td>LC</td>
                       <td>10/14/17</td>
                       <td>10/15/17</td>
