--- a/northeastne.html
+++ b/northeastne.html
@@ -211,7 +211,7 @@
                       <hr class="work-hr">
                     <ul class="inside-nav">
                       <!-- <span class="vert">&vert;</span> -->
-                      <li><a href="midwest.html">&larr; Midwestern Region</a></li>
+                      <li><a href="northeast.html">&larr; Northeastern Region</a></li>
                       <!-- <span class="vert">&vert;</span> -->
                     </ul>
                     <hr class="work-hr">
@@ -294,7 +294,7 @@
                          </th>
                         <td>
                           <strong>Miramar Retreat Center</strong> is located in the charming seaside town of Duxbury overlooking Kingston Bay.  The center is just north of Plymouth, and only 35 miles southeast of Boston off route 3.  This former ship owners estate is a modern well maintained air-conditioned center with beautiful  gardens and a labyrinth.   The center is only 200 yards to the bay which can be viewed from our second floor conference room.  The center is accessible by train or bus from Boston.  see
-                           <a href="www.miramarretreat.org" class="page-link">www.miramarretreat.org</a> 
+                           <a href="www.miramarretreat.org" class="page-link">www.miramarretreat.org</a>
                          </td>
                       </tr>
                       <tr>
