--- a/west.html
+++ b/west.html
@@ -204,10 +204,23 @@
 
             <div class="col-3-of-3">
                 <section class="section-inside">
-                  <div class="section-inside-header">
+                  <!-- <div class="section-inside-header">
                     <h5 class="heading-five">General Workshops</h5>
                     <h1 class="heading-one hr-overview">Schedules & Locations</h1>
+                  </div> -->
+                  <div class="section-inside-header">
+                    <h5 class="heading-five">General Workshops</h5>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <li><a href="schedules.html">&larr; Schedules & Location</a></li>
+                    </ul>
+                    <hr class="work-hr">
                   </div>
+                  </div>
+
+
                   <div class="section-inside-picture start-picture">
                   </div>
 
